--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b351a5b",
+   "id": "2fe0184e",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c97662",
+   "id": "da62789a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012264fe",
+   "id": "6f70b03a",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285f470d",
+   "id": "5b0a4c30",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f94e4432",
+   "id": "ad1bc2ce",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8528ebf",
+   "id": "d59fc27e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d95ba763",
+   "id": "cef6aa85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d964b0a1",
+   "id": "62b54390",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2fcfc44",
+   "id": "76d8bebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb31044",
+   "id": "6ed7b041",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f34a56",
+   "id": "bc3d1111",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89d13e7",
+   "id": "9d8d6e52",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8fd191",
+   "id": "9abe49dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c204a912",
+   "id": "75b97638",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef935b1",
+   "id": "a6d00235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "409697e2",
+   "id": "56836f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6329d5e5",
+   "id": "21c90be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db6eda7f",
+   "id": "cd4dc0f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5bc4282",
+   "id": "20a4a83e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d06100cf",
+   "id": "935171aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13043d8c",
+   "id": "cd8f7ac2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0625aac",
+   "id": "e1a334d6",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "504aea4c",
+   "id": "b346f770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a7d220",
+   "id": "049f288d",
    "metadata": {},
    "source": [
     "\n",
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60be8aea",
+   "id": "b1660245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd37c792",
+   "id": "1bcea87c",
    "metadata": {},
    "source": [
     "\n",
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "953d8315",
+   "id": "15fc0d2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cedfb805",
+   "id": "6848fa1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5f9a9b",
+   "id": "b1e49441",
    "metadata": {},
    "source": [
     "\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c95369",
+   "id": "d9a5c6e9",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62906f8",
+   "id": "d0e0fbcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025494c5",
+   "id": "aa270223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8619c5",
+   "id": "35cceb77",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e86e51",
+   "id": "fe7df2db",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79707c4e",
+   "id": "d9e5e0ca",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89ca8b88",
+   "id": "a45e8355",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b06710",
+   "id": "8484f7f3",
    "metadata": {},
    "source": [
     "\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcaaad31",
+   "id": "7a040749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fbc5353",
+   "id": "0741ebc2",
    "metadata": {},
    "source": [
     "\n",
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2411f94a",
+   "id": "6f3db2c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee3f758",
+   "id": "c11570c6",
    "metadata": {},
    "source": [
     "\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "937cd4b4",
+   "id": "52d6f863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699fdf23",
+   "id": "d3a85d97",
    "metadata": {},
    "source": [
     "\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27aed532",
+   "id": "61ac89ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08772a7d",
+   "id": "2bbfe0bf",
    "metadata": {},
    "source": [
     "\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "622b6ce0",
+   "id": "f43872f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60878443",
+   "id": "e4e41ea2",
    "metadata": {},
    "source": [
     "\n",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3533f74b",
+   "id": "d87294d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f18cdf7",
+   "id": "76c02aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d02ce65",
+   "id": "f62457da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ef28e2",
+   "id": "2bb68de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3994b38",
+   "id": "8dc0f606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32137e41",
+   "id": "b11c95f0",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf028cfe",
+   "id": "8f863980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81dc4e4f",
+   "id": "dab705cf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a9fddd",
+   "id": "1c8ea179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6719a072",
+   "id": "7c3c1a62",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6048e86b",
+   "id": "a0804658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa43de57",
+   "id": "71e46d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fb8b44a",
+   "id": "8c245ebe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "895d7847",
+   "id": "052d6354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7501d974",
+   "id": "db2297dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b776f5c5",
+   "id": "136291a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ebb5630",
+   "id": "282d8f48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "589b0d83",
+   "id": "5147ae14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21615220",
+   "id": "bebb7149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5038e52c",
+   "id": "63d7ec4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9117f763",
+   "id": "ef60481b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0319acae",
+   "id": "cf482968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2d0548",
+   "id": "71da09a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d29d670",
+   "id": "0abeb047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1770,7 +1770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c8c18aa",
+   "id": "214901ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c999bb",
+   "id": "b2a6b7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f1d4fb",
+   "id": "18805a65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "727e9e51",
+   "id": "915558be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a0f01f",
+   "id": "869fd2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,7 +1913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18677ec5",
+   "id": "963a1f7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61fc62d6",
+   "id": "8cc2695e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e9a11a4",
+   "id": "fdf0cde0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1cd4abc",
+   "id": "b48b8d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e2b592c",
+   "id": "f9b5e788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10320f44",
+   "id": "f5624657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,7 +2019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e1ea42",
+   "id": "95e74ae8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fcb3445",
+   "id": "829fe625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,7 +2045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed0bd36",
+   "id": "baf80eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3792c021",
+   "id": "b85edb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553be35c",
+   "id": "cd95aeeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bfa4b1f",
+   "id": "b099231c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e20172",
+   "id": "dff45d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3baa516a",
+   "id": "82f2c453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2179,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68678a31",
+   "id": "e5a0a47d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5c5d86",
+   "id": "a2b67591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2207,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f896f453",
+   "id": "53be77dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,8 +2236,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb4a719",
-   "metadata": {},
+   "id": "3724d9e7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -2270,6 +2272,44 @@
     "axs[2].set_title(\"0.95 Quantile\")\n",
     "_ = fig.suptitle(\"GBRT Predictions for different quantiles\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6e751a2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def coverage_score(y_true, y_quantile_low, y_quantile_high):\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_quantile_low = np.asarray(y_quantile_low)\n",
+    "    y_quantile_high = np.asarray(y_quantile_high)\n",
+    "    return np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a5ec568",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coverage_score(\n",
+    "    targets[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_05[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    "    predictions_gbrt_95[\"load_mw_horizon_24h\"].skb.eval().to_numpy(),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc0b6fe9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
